# sinergia

./: pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
init_db/: pyproject.toml
init_db/app/: __main__.py
init_db/app/core/: logger.py  parser.py
init_db/app/core/constants/: firestore.py
init_db/app/data/: gi_comuni_cap.json
init_db/app/models/: gi_comuni.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  injection_container.dart  main.dart
lib/core/costants/: firestore_collections.dart
lib/core/usecase/: use_case.dart
lib/features/cities/data/datasources/: city_firestore_ds.dart
lib/features/cities/data/models/: city_model.dart
lib/features/cities/data/repositories/: city_repository.dart
lib/features/cities/domain/entities/: city_entity.dart
lib/features/cities/domain/repositories/: city_repository.dart
lib/features/cities/domain/usecases/: base.dart  get_by_region.dart
lib/features/cities/presentation/bloc/: cities_bloc.dart  cities_event.dart  cities_state.dart
lib/features/cities/presentation/widgets/: cities_table.dart  table_container.dart
lib/features/cities/utils/: table_data_source.dart
lib/view/pages/: home.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+9 files in other folders)
