[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["llorenzinho <lorenzo.dagostino.ref@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firebase-admin = "^6.3.0"
firestore = "^0.0.8"
iso3166-2 = "1.4.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
